# hpc

./: README.md
L02/: homework1.md
L02/hpc02-code.tar.gz/cmakecode/cached/: CMakeLists.txt
L02/hpc02-code.tar.gz/cmakecode/lang/: CMakeLists.txt  vecadd.cpp
L02/hpc02-code.tar.gz/cmakecode/parameters/: CMakeLists.txt
L02/hpc02-code.tar.gz/cmakecode/program/: CMakeLists.txt
L02/hpc02-code.tar.gz/cmakecode/vecmatrix/: CMakeLists.txt
L02/hpc02-code.tar.gz/cmakecode/vecmatrix/include/: matrix.h  timecounters.h
L02/hpc02-code.tar.gz/debugging/gdbcode/: debugcode.O3  debugcode.O3.frame.s  debugcode.O3.s  debugcode.g  heap_buffer_overflow.cpp
L02/hpc02-code.tar.gz/debugging/sanitizer/: heap_buffer_overflow.cpp
L02/hpc02-code.tar.gz/debugging/threads/: gdbthread.cpp
L02/hpc02-code.tar.gz/debugging/valgrind/: leak.cpp
L02/hpc02-code.tar.gz/g++code/: preproc.cpp  vecmatrixopt.cpp  warningerror.cpp
L02/hpc02-code.tar.gz/makecode/: Makefile  vecmatrix.cpp
L02/hpc02-code.tar.gz/makecode/src/: matrix.cpp
L02/src/: homework1.cpp  homework1_O0  homework1_O0.s  homework1_O1  homework1_O1.s  homework1_O2  homework1_O2.s  homework1_O3  homework1_O3.s  plot.py
